--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <header>
-        <h1>Bryan Cueva</h1>
+    <header class="header">
+        <div class="header__container">
+            <h1 class="nombre"><span>BRYAN ADRIAN</span>CUEVA SANCHEZ</h1>
+            <p>DISEÑADOR WEB</p>
+        </div>
+        <figure class="foto">
+            <img src="https://i.picsum.photos/id/901/300/400.jpg?hmac=kZNj7j9sxxJn_9eM6PJQUjU_JKQVB27CkxR744i_Eeg"
+                alt="">
+        </figure>
     </header>
 </body>
+
 </html>
