--- a/index.html
+++ b/index.html
@@ -6,20 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Bryan Cueva - Portfolio</title>
 </head>
 
 <body>
     <header class="header">
-        <div class="header__container">
-            <h1 class="nombre"><span>BRYAN ADRIAN</span>CUEVA SANCHEZ</h1>
-            <p>DISEÑADOR WEB</p>
+        <nav class="header__nav">
+            <ul class="nav__list">
+                <li><a class="nav__link selected" href="#">Inicio</a></li>
+                <li><a class="nav__link" href="#">Estudios</a></li>
+                <li><a class="nav__link" href="#">Skills</a></li>
+                <li><a class="nav__link" href="#">Proyectos</a></li>
+                <li><a class="nav__link" href="#">About me</a></li>
+            </ul>
+        </nav>
+        <div class="header__inicio">
+            <h1>Hola, soy<span>Bryan Cueva</span></h1>
+            <figure class="inicio__foto">
+                <img src="https://i.picsum.photos/id/314/300/400.jpg?hmac=TCw1zHgtx49rMnOOFtSpVCLI1rCRiEQzAbXAM8mxvT0"
+                    alt="">
+            </figure>
         </div>
-        <figure class="foto">
-            <img src="https://i.picsum.photos/id/901/300/400.jpg?hmac=kZNj7j9sxxJn_9eM6PJQUjU_JKQVB27CkxR744i_Eeg"
-                alt="">
-        </figure>
     </header>
+    <main class="main">
+        <section class="estudios">
+            <h2>Estudios</h2>
+            <div class="estudios__container">
+                <div class="estudios__linea">
+                    <div class="estudios__years">
+                        <p>2029</p>
+                        <p>2029</p>
+                        <p>2029</p>
+                        <p>2029</p>
+                    </div>
+                    <div class="linea"></div>
+                    <div class="estudios__descri">
+                        <p>Universidad nananannananshsh</p>
+                        <p>Universidad nananannananshsh</p>
+                        <p>Universidad nananannananshsh</p>
+                        <p>Universidad nananannananshsh</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
