--- a/index.html
+++ b/index.html
@@ -49,6 +49,55 @@
                 </div>
             </div>
         </section>
+        <section class="skills">
+            <div class="skills__container">
+                <div class="circular__container" >
+                    <p>50%</p>
+                    <figure class="circular">
+                        <img class="logo" src="img/html.png" alt="">
+                        <svg class="circular__svg" id="circular">
+                            <circle cx="70" cy="70" r="70"></circle>
+                            <circle cx="70" cy="70" r="70"></circle>
+                        </svg>
+                    </figure>
+                    <h3>Html</h3>
+                </div>
+                <div class="circular__container" >
+                    <p>50%</p>
+                    <figure class="circular">
+                        <img class="logo" src="img/html.png" alt="">
+                        <svg class="circular__svg" id="circular">
+                            <circle cx="70" cy="70" r="70"></circle>
+                            <circle cx="70" cy="70" r="70"></circle>
+                        </svg>
+                    </figure>
+                    <h3>Html</h3>
+                </div>
+                <div class="circular__container" >
+                    <p>50%</p>
+                    <figure class="circular">
+                        <img class="logo" src="img/html.png" alt="">
+                        <svg class="circular__svg" id="circular">
+                            <circle cx="70" cy="70" r="70"></circle>
+                            <circle cx="70" cy="70" r="70"></circle>
+                        </svg>
+                    </figure>
+                    <h3>Html</h3>
+                </div>
+                <div class="circular__container" >
+                    <p>50%</p>
+                    <figure class="circular">
+                        <img class="logo" src="img/html.png" alt="">
+                        <svg class="circular__svg" id="circular">
+                            <circle cx="70" cy="70" r="70"></circle>
+                            <circle cx="70" cy="70" r="70"></circle>
+                        </svg>
+                    </figure>
+                    <h3>Html</h3>
+                </div>
+            </div>
+            
+        </section>
     </main>
 </body>
 
