--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Hola, soy<span>Bryan Cueva</span></h1>
             <figure class="inicio__foto">
                 <img src="https://i.picsum.photos/id/314/300/400.jpg?hmac=TCw1zHgtx49rMnOOFtSpVCLI1rCRiEQzAbXAM8mxvT0"
-                    alt="">
+                alt="">
             </figure>
         </div>
     </header>
@@ -99,6 +99,7 @@
             
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
 
 </html>
