--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
                 <li><a class="nav__link" href="#">About me</a></li>
             </ul>
         </nav>
-        <div class="header__inicio">
-            <h1>Hola, soy<span>Bryan Cueva</span></h1>
-            <figure class="inicio__foto">
-                <img src="https://i.picsum.photos/id/314/300/400.jpg?hmac=TCw1zHgtx49rMnOOFtSpVCLI1rCRiEQzAbXAM8mxvT0"
-                alt="">
-            </figure>
+        <div class="wrapper__inicio">
+            <div class="header__inicio">
+                <h1>Hola, soy<span>Bryan Cueva</span></h1>
+            </div>
         </div>
     </header>
     <main class="main">
