--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -14,20 +14,18 @@
         <nav class="header__nav">
             <ul class="nav__list">
                 <li><a class="nav__link selected" href="#">Inicio</a></li>
-                <li><a class="nav__link" href="#">Estudios</a></li>
-                <li><a class="nav__link" href="#">Skills</a></li>
+                <li><a class="nav__link" href="#estudios">Estudios</a></li>
+                <li><a class="nav__link" href="#skills">Skills</a></li>
                 <li><a class="nav__link" href="#">Proyectos</a></li>
                 <li><a class="nav__link" href="#">About me</a></li>
             </ul>
         </nav>
-        <div class="wrapper__inicio">
-            <div class="header__inicio">
-                <h1>Hola, soy<span>Bryan Cueva</span></h1>
-            </div>
+        <div class="header__inicio">
+            <h1>Hola, soy<span>Bryan Cueva</span></h1>
         </div>
     </header>
     <main class="main">
-        <section class="estudios">
+        <section class="estudios" id="estudios">
             <h2>Estudios</h2>
             <div class="estudios__container">
                 <div class="estudios__linea">
@@ -47,7 +45,8 @@
                 </div>
             </div>
         </section>
-        <section class="skills">
+        <section class="skills" id="skills">
+            <h2>Skills</h2>
             <div class="skills__container">
                 <div class="circular__container" >
                     <p>50%</p>
