--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
                     <h3>Html</h3>
                 </div>
             </div>
+        </section>
+        <section>
             
         </section>
     </main>
