--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </ul>
         </nav>
         <div class="header__inicio">
-            <h1>Hola, soy<span>Bryan Cueva</span></h1>
+            <p>Hola, soy</p>
+            <h1>Bryan Cueva</h1>
         </div>
     </header>
     <main class="main">
@@ -95,7 +96,7 @@
             </div>
         </section>
         <section>
-            
+
         </section>
     </main>
     <script src="main.js"></script>
