--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             </ul>
         </nav>
         <div class="header__inicio">
-            <p>Hola, soy</p>
-            <h1>Bryan Cueva</h1>
+            <h1>Hola, soy<span>Bryan Cueva</span></h1>
         </div>
     </header>
     <main class="main">
@@ -52,7 +51,7 @@
                 <div class="circular__container" >
                     <p>50%</p>
                     <figure class="circular">
-                        <img class="logo" src="img/html.png" alt="">
+                        <img class="logo" src="images/html_logo.png" alt="">
                         <svg class="circular__svg" id="circular">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
@@ -63,35 +62,35 @@
                 <div class="circular__container" >
                     <p>50%</p>
                     <figure class="circular">
-                        <img class="logo" src="img/html.png" alt="">
+                        <img class="logo" src="images/css_logo.png" alt="">
                         <svg class="circular__svg" id="circular">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
                     </figure>
-                    <h3>Html</h3>
+                    <h3>CSS</h3>
                 </div>
                 <div class="circular__container" >
                     <p>50%</p>
                     <figure class="circular">
-                        <img class="logo" src="img/html.png" alt="">
+                        <img class="logo" src="images/js_logo.png" alt="">
                         <svg class="circular__svg" id="circular">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
                     </figure>
-                    <h3>Html</h3>
+                    <h3>JavaScript</h3>
                 </div>
                 <div class="circular__container" >
                     <p>50%</p>
                     <figure class="circular">
-                        <img class="logo" src="img/html.png" alt="">
+                        <img class="logo" src="images/flutter_logo.png" alt="">
                         <svg class="circular__svg" id="circular">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
                     </figure>
-                    <h3>Html</h3>
+                    <h3>Flutter</h3>
                 </div>
             </div>
         </section>
