--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </nav>
         <div class="header__inicio">
             <h1>Hola, soy<span>Bryan Cueva</span></h1>
+            <p><span class="typed"></span><span class="typed__cursor">|</span></p>
         </div>
     </header>
     <main class="main">
