--- a/index.html
+++ b/index.html
@@ -12,17 +12,64 @@
 <body>
     <header class="header">
         <nav class="header__nav">
+            <h1 class="nombre__logo">Bryan<span>Cueva</span></h1>
             <ul class="nav__list">
                 <li><a class="nav__link selected" href="#">Inicio</a></li>
                 <li><a class="nav__link" href="#estudios">Estudios</a></li>
                 <li><a class="nav__link" href="#skills">Skills</a></li>
                 <li><a class="nav__link" href="#">Proyectos</a></li>
-                <li><a class="nav__link" href="#">About me</a></li>
+                <li><a class="nav__link" href="#contacto">Contactame</a></li>
             </ul>
         </nav>
         <div class="header__inicio">
-            <h1>Hola, soy<span>Bryan Cueva</span></h1>
+            <p class="inicio__presen">Hola, soy<span>Bryan Cueva</span></p>
             <p><span class="typed"></span><span class="typed__cursor">|</span></p>
+            <div class="redes">
+                <figure>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="2500" height="2500"
+                        viewBox="0 0 2499.899999999999 2500">
+                        <defs>
+                            <radialGradient id="a" cx="332.14" cy="2511.81" r="3263.54" gradientUnits="userSpaceOnUse">
+                                <stop offset=".09" stop-color="#fa8f21" />
+                                <stop offset=".78" stop-color="#d82d7e" />
+                            </radialGradient>
+                            <radialGradient id="b" cx="1516.14" cy="2623.81" r="2572.12" gradientUnits="userSpaceOnUse">
+                                <stop offset=".64" stop-color="#8c3aaa" stop-opacity="0" />
+                                <stop offset="1" stop-color="#8c3aaa" />
+                            </radialGradient>
+                        </defs>
+                        <path
+                            d="M833.4 1250c0-230.11 186.49-416.7 416.6-416.7s416.7 186.59 416.7 416.7-186.59 416.7-416.7 416.7-416.6-186.59-416.6-416.7m-225.26 0c0 354.5 287.36 641.86 641.86 641.86s641.86-287.36 641.86-641.86S1604.5 608.14 1250 608.14 608.14 895.5 608.14 1250m1159.13-667.31a150 150 0 1 0 150.06-149.94h-.06a150.07 150.07 0 0 0-150 149.94M745 2267.47c-121.87-5.55-188.11-25.85-232.13-43-58.36-22.72-100-49.78-143.78-93.5s-70.88-85.32-93.5-143.68c-17.16-44-37.46-110.26-43-232.13-6.06-131.76-7.27-171.34-7.27-505.15s1.31-373.28 7.27-505.15c5.55-121.87 26-188 43-232.13 22.72-58.36 49.78-100 93.5-143.78s85.32-70.88 143.78-93.5c44-17.16 110.26-37.46 232.13-43 131.76-6.06 171.34-7.27 505-7.27s373.28 1.31 505.15 7.27c121.87 5.55 188 26 232.13 43 58.36 22.62 100 49.78 143.78 93.5s70.78 85.42 93.5 143.78c17.16 44 37.46 110.26 43 232.13 6.06 131.87 7.27 171.34 7.27 505.15s-1.21 373.28-7.27 505.15c-5.55 121.87-25.95 188.11-43 232.13-22.72 58.36-49.78 100-93.5 143.68s-85.42 70.78-143.78 93.5c-44 17.16-110.26 37.46-232.13 43-131.76 6.06-171.34 7.27-505.15 7.27s-373.28-1.21-505-7.27M734.65 7.57c-133.07 6.06-224 27.16-303.41 58.06C349 97.54 279.38 140.35 209.81 209.81S97.54 349 65.63 431.24c-30.9 79.46-52 170.34-58.06 303.41C1.41 867.93 0 910.54 0 1250s1.41 382.07 7.57 515.35c6.06 133.08 27.16 223.95 58.06 303.41 31.91 82.19 74.62 152 144.18 221.43S349 2402.37 431.24 2434.37c79.56 30.9 170.34 52 303.41 58.06C868 2498.49 910.54 2500 1250 2500s382.07-1.41 515.35-7.57c133.08-6.06 223.95-27.16 303.41-58.06 82.19-32 151.86-74.72 221.43-144.18s112.18-139.24 144.18-221.43c30.9-79.46 52.1-170.34 58.06-303.41 6.06-133.38 7.47-175.89 7.47-515.35s-1.41-382.07-7.47-515.35c-6.06-133.08-27.16-224-58.06-303.41-32-82.19-74.72-151.86-144.18-221.43S2150.95 97.54 2068.86 65.63c-79.56-30.9-170.44-52.1-303.41-58.06C1632.17 1.51 1589.56 0 1250.1 0S868 1.41 734.65 7.57"
+                            fill="url(#a)" />
+                        <path
+                            d="M833.4 1250c0-230.11 186.49-416.7 416.6-416.7s416.7 186.59 416.7 416.7-186.59 416.7-416.7 416.7-416.6-186.59-416.6-416.7m-225.26 0c0 354.5 287.36 641.86 641.86 641.86s641.86-287.36 641.86-641.86S1604.5 608.14 1250 608.14 608.14 895.5 608.14 1250m1159.13-667.31a150 150 0 1 0 150.06-149.94h-.06a150.07 150.07 0 0 0-150 149.94M745 2267.47c-121.87-5.55-188.11-25.85-232.13-43-58.36-22.72-100-49.78-143.78-93.5s-70.88-85.32-93.5-143.68c-17.16-44-37.46-110.26-43-232.13-6.06-131.76-7.27-171.34-7.27-505.15s1.31-373.28 7.27-505.15c5.55-121.87 26-188 43-232.13 22.72-58.36 49.78-100 93.5-143.78s85.32-70.88 143.78-93.5c44-17.16 110.26-37.46 232.13-43 131.76-6.06 171.34-7.27 505-7.27s373.28 1.31 505.15 7.27c121.87 5.55 188 26 232.13 43 58.36 22.62 100 49.78 143.78 93.5s70.78 85.42 93.5 143.78c17.16 44 37.46 110.26 43 232.13 6.06 131.87 7.27 171.34 7.27 505.15s-1.21 373.28-7.27 505.15c-5.55 121.87-25.95 188.11-43 232.13-22.72 58.36-49.78 100-93.5 143.68s-85.42 70.78-143.78 93.5c-44 17.16-110.26 37.46-232.13 43-131.76 6.06-171.34 7.27-505.15 7.27s-373.28-1.21-505-7.27M734.65 7.57c-133.07 6.06-224 27.16-303.41 58.06C349 97.54 279.38 140.35 209.81 209.81S97.54 349 65.63 431.24c-30.9 79.46-52 170.34-58.06 303.41C1.41 867.93 0 910.54 0 1250s1.41 382.07 7.57 515.35c6.06 133.08 27.16 223.95 58.06 303.41 31.91 82.19 74.62 152 144.18 221.43S349 2402.37 431.24 2434.37c79.56 30.9 170.34 52 303.41 58.06C868 2498.49 910.54 2500 1250 2500s382.07-1.41 515.35-7.57c133.08-6.06 223.95-27.16 303.41-58.06 82.19-32 151.86-74.72 221.43-144.18s112.18-139.24 144.18-221.43c30.9-79.46 52.1-170.34 58.06-303.41 6.06-133.38 7.47-175.89 7.47-515.35s-1.41-382.07-7.47-515.35c-6.06-133.08-27.16-224-58.06-303.41-32-82.19-74.72-151.86-144.18-221.43S2150.95 97.54 2068.86 65.63c-79.56-30.9-170.44-52.1-303.41-58.06C1632.17 1.51 1589.56 0 1250.1 0S868 1.41 734.65 7.57"
+                            fill="url(#b)" />
+                    </svg>
+                </figure>
+                <figure>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1365.12" height="1365.12" viewBox="0 0 14222 14222">
+                        <circle cx="7111" cy="7112" r="7111" fill="#1977f3" />
+                        <path
+                            d="M9879 9168l315-2056H8222V5778c0-562 275-1111 1159-1111h897V2917s-814-139-1592-139c-1624 0-2686 984-2686 2767v1567H4194v2056h1806v4969c362 57 733 86 1111 86s749-30 1111-86V9168z"
+                            fill="#fff" />
+                    </svg>
+                </figure>
+                <figure>
+                    <svg height="2500" width="2490" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+                        <g fill="none">
+                            <path
+                                d="M0 18.338C0 8.216 8.474 0 18.92 0h218.16C247.53 0 256 8.216 256 18.338v219.327C256 247.79 247.53 256 237.08 256H18.92C8.475 256 0 247.791 0 237.668V18.335z"
+                                fill="#069" />
+                            <path
+                                d="M77.796 214.238V98.986H39.488v115.252H77.8zM58.65 83.253c13.356 0 21.671-8.85 21.671-19.91-.25-11.312-8.315-19.915-21.417-19.915-13.111 0-21.674 8.603-21.674 19.914 0 11.06 8.312 19.91 21.169 19.91h.248zM99 214.238h38.305v-64.355c0-3.44.25-6.889 1.262-9.346 2.768-6.885 9.071-14.012 19.656-14.012 13.858 0 19.405 10.568 19.405 26.063v61.65h38.304v-66.082c0-35.399-18.896-51.872-44.099-51.872-20.663 0-29.738 11.549-34.78 19.415h.255V98.99H99.002c.5 10.812-.003 115.252-.003 115.252z"
+                                fill="#fff" />
+                        </g>
+                    </svg>
+                </figure>
+                <figure>
+                    <img src="images/githut_logo.png" alt="">
+                </figure>
+            </div>
         </div>
     </header>
     <main class="main">
@@ -49,7 +96,7 @@
         <section class="skills" id="skills">
             <h2>Skills</h2>
             <div class="skills__container">
-                <div class="circular__container" >
+                <div class="circular__container">
                     <p>50%</p>
                     <figure class="circular">
                         <img class="logo" src="images/html_logo.png" alt="">
@@ -60,7 +107,7 @@
                     </figure>
                     <h3>Html</h3>
                 </div>
-                <div class="circular__container" >
+                <div class="circular__container">
                     <p>50%</p>
                     <figure class="circular">
                         <img class="logo" src="images/css_logo.png" alt="">
@@ -71,7 +118,7 @@
                     </figure>
                     <h3>CSS</h3>
                 </div>
-                <div class="circular__container" >
+                <div class="circular__container">
                     <p>50%</p>
                     <figure class="circular">
                         <img class="logo" src="images/js_logo.png" alt="">
@@ -82,7 +129,7 @@
                     </figure>
                     <h3>JavaScript</h3>
                 </div>
-                <div class="circular__container" >
+                <div class="circular__container">
                     <p>50%</p>
                     <figure class="circular">
                         <img class="logo" src="images/flutter_logo.png" alt="">
@@ -95,8 +142,16 @@
                 </div>
             </div>
         </section>
-        <section>
-
+        <section class="contacto" id="contacto">
+            <div class="contacto__mensaje">
+                <p>Contactame y hagamos realidad tus proyectos</p>
+            </div>
+            <form class="contacto__form" action="">
+                <input type="text" name="" id="form__nombre" placeholder="Nombre">
+                <input type="email" name="" id="form__email" placeholder="Email">
+                <textarea name="" id="form__mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                <button>Enviar</button>
+            </form>
         </section>
     </main>
     <script src="main.js"></script>
